fix slider content align

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -102,6 +102,8 @@
 			min-height: 100vh;
 			padding-top: 100px;
 			padding-bottom: 100px;
+			display: flex;
+			align-items: center;
 
 			@include media-breakpoint-only(xs) {
 				padding-top: 150px;
